--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,9 @@
 ---
 name: CI
 'on':
-  pull_request:
   push:
-    branches:
-      - master
-  schedule:
-    - cron: "0 5 * * 4"
+    tags:
+      - buildme
 
 jobs:
 
