--- a/main.yml
+++ b/main.yml
@@ -9,14 +9,14 @@
       include_vars: "{{ item }}"
       with_fileglob:
         - "{{ playbook_dir }}/config.yml"
-      tags: ['always']
+      tags: ["always"]
 
   roles:
     - role: geerlingguy.homebrew
-      tags: ['homebrew']
+      tags: ["homebrew"]
     - role: geerlingguy.mas
       when: mas_installed_apps
-      tags: ['mas']
+      tags: ["mas"]
 
   tasks:
     - include_tasks: tasks/ansible-setup.yml
@@ -26,10 +26,10 @@
 
     - include_tasks: tasks/osx.yml
       when: configure_osx
-      tags: ['osx']
+      tags: ["osx"]
 
     - include_tasks: tasks/extra-packages.yml
-      tags: ['extra-packages']
+      tags: ["extra-packages"]
 
     - name: Run configured post-provision ansible task files.
       include_tasks: "{{ outer_item }}"
