--- a/default.config.yml
+++ b/default.config.yml
@@ -41,20 +41,18 @@ homebrew_taps:
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
-  - chromedriver
+  # - chromedriver # Already installed in github CI machines
   - docker
   - google-chrome
   - vagrant
-  - dotnet-sdk
-  - dotnet-sdk-2.2.400
+  # - dotnet-sdk # Already installed in github CI machines
+  - dotnet-sdk-2-2-400
   - adoptopenjdk8
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps: []
 mas_email: ""
 mas_password: ""
-
-osx_script: "~/.osx --no-restart"
 
 # Install packages from other package managers.
 # Note: You are responsible for making sure the required package managers are
