--- a/tasks/osx.yml
+++ b/tasks/osx.yml
@@ -1,5 +1,13 @@
 ---
-# TODO: Use sudo once .osx can be run via root with no user interaction.
+- name: Copy .osx dotfile
+  copy:
+    src: files/.osx
+    dest: "~/.osx"
+    owner: foo
+    group: foo
+    mode: "0644"
+  become: false
 - name: Run .osx dotfiles.
-  command: "{{ osx_script }}"
+  command: "~/.osx"
+  become: true
   changed_when: false
