--- a/default.config.yml
+++ b/default.config.yml
@@ -1,5 +1,5 @@
 ---
-downloads: ~/.ansible-downloads/
+user_for_ansible: {{ ansible_user | default(lookup('env', 'USER'), True) }}
 
 configure_dotfiles: true
 configure_osx: true
@@ -27,6 +27,7 @@ homebrew_installed_packages:
   - nvm
   - php
   - rbenv
+  - ruby-build
   - ssh-copy-id
   - cowsay
   - readline
